--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-md-6 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/about-1.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>年轻却不轻狂的团队</h2>
                             <p>恒心团队多由海外名校毕业，年龄层与目标客户群体相仿，能精准把握当下留学生的心态与需求；</p>
@@ -35,7 +35,7 @@
 
             <div class="col-md-6 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/about-2.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>细化却不僵化的服务</h2>
                         <p>一对一客服随时待命，多轮沟通，全面掌握客户现状与需求；</p>
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="col-md-6 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/about-3.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>大同却大不同的体验</h2>
                             <p>全球代理四方汇集最及时的需求动态与政策走向；</p>
@@ -61,7 +61,7 @@
 
             <div class="col-md-6 animate-box fadeInUp animated">
                 <div class="hexoco-project-item">
-                    <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                    <img src="/static/images/web/about-4.png" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>有广度更有深度的资源</h2>
                         <p>核心项目均为一手优质资源，保证最低的价格，最快的速度，最贴心的服务与最完美的结果；</p>
