--- a/core/templates/web/immigrant.html
+++ b/core/templates/web/immigrant.html
@@ -44,7 +44,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-user"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">年龄21-55岁</h4>
@@ -70,7 +70,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-play"></i>
+                                <i class="icon-briefcase"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">两年以上相关工作经验，非技术类只需两年工作经验以下</h4>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-leaf"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">身体健康，无犯罪记录史</h4>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-coin-dollar"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">有一定经济基础优先（最好10万美元资产以上）</h4>
@@ -102,7 +102,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-phone"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">技术移民相关政策咨询答疑</h4>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-credit-card"></i>
+                                <i class="icon-pie-chart"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">美国当地就业培训机构人才输送</h4>
@@ -119,7 +119,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-list"></i>
+                                <i class="icon-profile"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">工作签证指导办理</h4>
@@ -127,7 +127,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-play"></i>
+                                <i class="icon-keyboard"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">猎聘网北美总部人才资源数据库录入</h4>
@@ -142,6 +142,9 @@
                     <h1>EB-3 移民办理流程</h1>
                 </div>
                 <div class="col-xs-12 text-center">
+                    <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                        <img src="/static/images/web/immigrantflow0.png" style="width: 100%;height: auto">
+                    </div>
                 </div>
             </div>
 
@@ -195,6 +198,9 @@
             <div class="row" style="margin-top:3em;">
                 <div class="col-xs-12 text-center">
                     <h1>EB-5 移民办理流程</h1>
+                </div>
+                <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                    <img src="/static/images/web/immigrantflow.png" style="width: 30%;height: auto">
                 </div>
             </div>
         </div>
