--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -44,28 +44,16 @@
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+{#            <li data-target="#carousel-example-generic" data-slide-to="1"></li>#}
+{#            <li data-target="#carousel-example-generic" data-slide-to="2"></li>#}
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="/static/images/1.jpg" style="width: 100%;"  alt="...">
+                <img src="/static/images/web/carousel-1.png" style="width: 100%;"  alt="...">
                 <div class="carousel-caption">
-                    ...
-                </div>
-            </div>
-            <div class="item">
-                <img src="/static/images/img_bg_2.jpg" style="width: 100%;" alt="...">
-                <div class="carousel-caption">
-                    ...
-                </div>
-            </div>
-            <div class="item">
-                <img src="/static/images/img_bg_2.jpg" style="width: 100%;" alt="...">
-                <div class="carousel-caption">
-                    ...
+
                 </div>
             </div>
         </div>
@@ -102,7 +90,7 @@
                 <div class="col-md-3 col-sm-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-command"></i>
+							<i class="icon-search"></i>
 						</span>
                         <h3>用户中心进度查询</h3>
                         <p>用户中心进度查询，随时随地了解项目进度，让你的等待变得省时又安心。</p>
@@ -113,7 +101,7 @@
                 <div class="col-md-3 col-sm-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-eye"></i>
+							<i class="icon-airplane"></i>
 						</span>
                         <h3>名校直通</h3>
                         <p>TOP100名校轻松保进，遇对了人，拿OFFER也可以像拿快递一样简单；</p>
@@ -125,7 +113,7 @@
                 <div class="col-md-3 col-sm-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-power"></i>
+							<i class="icon-onedrive"></i>
 						</span>
                         <h3>会员福利多多</h3>
                         <p>会员福利多多，恒心微管家让你免费享受黑卡持有者般的高配生活礼遇。</p>
@@ -233,7 +221,7 @@
                 <div class="col-md-6">
                     <div class="feature-banner animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-checkmark"></i>
+							<i class="icon-leaf"></i>
 						</span>
 						<div class="feature-banner-copy">
 							<h4>极简页面</h4>
@@ -243,7 +231,7 @@
 
                      <div class="feature-banner animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
-							<i class="icon-checkmark"></i>
+							<i class="icon-search"></i>
 						</span>
 						<div class="feature-banner-copy">
 							<h4>实时查询</h4>
@@ -253,7 +241,7 @@
 
                      <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" style="margin-bottom: 4em;">
 						<span class="icon">
-							<i class="icon-checkmark"></i>
+							<i class="icon-onedrive"></i>
 						</span>
 						<div class="feature-banner-copy">
 							<h4>丰富奖励</h4>
@@ -262,12 +250,12 @@
 					</div>
 
                     <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" >
-                        <a href="/" class="btn btn-info">MORE&nbsp;&nbsp;&gt;&gt;</a>
+                        <a href="/u/index" class="btn btn-info">MORE&nbsp;&nbsp;&gt;&gt;</a>
                     </div>
                 </div>
 
                 <div class="col-md-6">
-                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/index-user.png); ">
 
                     </div>
 
@@ -291,7 +279,7 @@
                                     {#								<span class="icon">#}
                                     {#									<i class="icon-briefcase"></i>#}
                                     {#								</span>#}
-                                    <span class="counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50" style="">1</span>
+                                    <span class="counter js-counter" data-from="0" data-to="5" data-speed="5000" data-refresh-interval="50" style="">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">年</span>
                                     <span class="counter-label" style="">业内口碑名列前茅</span>
                                 </div>
@@ -302,7 +290,7 @@
                                     {#									<i class="icon-clock"></i>#}
                                     {#								</span>#}
 
-                                    <span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
+                                    <span class="counter js-counter" data-from="0" data-to="121" data-speed="5000" data-refresh-interval="50">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">名</span>
                                     <span class="counter-label">国内外优质名师汇聚</span>
 
@@ -314,7 +302,7 @@
                                     {#									<i class="icon-clock"></i>#}
                                     {#								</span>#}
 
-                                    <span class="counter js-counter" data-from="0" data-to="5000" data-speed="5000" data-refresh-interval="50">1</span>
+                                    <span class="counter js-counter" data-from="0" data-to="952" data-speed="5000" data-refresh-interval="50">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">人</span>
                                     <span class="counter-label">从这里走向国外名校</span>
 
@@ -326,7 +314,7 @@
                                     {#									<i class="icon-clock"></i>#}
                                     {#								</span>#}
 
-                                    <span class="counter js-counter" data-from="0" data-to="100" data-speed="5000" data-refresh-interval="50">1名</span>
+                                    <span class="counter js-counter" data-from="0" data-to="98" data-speed="5000" data-refresh-interval="50">1</span>
                                     <span style="font-size: 30px;color:rgba(63, 209, 234, 0.64);">%</span>
                                     <span class="counter-label">办理成功率</span>
 
