--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -11,12 +11,12 @@
 {% block content %}
 
     <div class="course-header carousel-margin">
-        <img  src="/static/images/web/courseheader.png">
+        <img  src="/static/images/web/ksbkbanner.png">
     </div>
     <div class="container" style="margin-top:3em;">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center heading-section">
-                <h4>独家招生总代理</h4>
+                <h4>招生代理</h4>
                 <p>如果你觉得用国外四年的孤独换一张毕业证书太过“劳民伤财”，那一年制快速本科可能就是你心仪的 PLAN B</p>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <div class="col-md-6">
                 <div class="feature-banner">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-books"></i>
                     </span>
                     <div class="feature-banner-copy">
                         <h4>学费低廉价格好，轻松入学没烦恼</h4>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="feature-banner">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-airplane"></i>
                     </span>
                     <div class="feature-banner-copy">
                         <h4>体育保送，让您美国圆梦</h4>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="feature-banner">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-office"></i>
                     </span>
                     <div class="feature-banner-copy">
                         <h4>安那罕市安全校区，学生安心家长放心</h4>
@@ -62,7 +62,7 @@
             <div class="col-md-6">
                 <div class="feature-banner">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-price-tag"></i>
                     </span>
                     <div class="feature-banner-copy">
                         <h4>跨越语言门坎，进入留学殿堂</h4>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="feature-banner">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-tablet"></i>
                     </span>
                     <div class="feature-banner-copy">
                         <h4>随时Online，让学习无所不在</h4>
@@ -83,57 +83,59 @@
         <div class="col-md-8 col-md-offset-2 text-center animate-box fadeInUp animated"  style="margin-top: 3em;margin-bottom: 2em;">
             <h1>快速本科办理流程</h1>
         </div>
-
-        <div class="row row-bottom-padded-lg">
-            <div class="col-md-3 col-push-1">
-                <div class="fh5co-icon"><i class="icon-browser"></i></div>
-            </div>
-            <div class="col-md-8 col-md-push-1">
-                <h4 class="fh5co-number">01.</h4>
-                <h2 class="numberh2">提交资料</h2>
-            </div>
+        <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                <img src="/static/images/web/ksbkflow.png" style="width: 80%;height: auto">
         </div>
-        <div class="row row-bottom-padded-lg">
-            <div class="col-xs-push-2 col-md-8">
-                <h4 class="fh5co-number">02.</h4>
-                <h2>可行性评估</h2>
-            </div>
-            <div class="col-md-3 col-md-push-1">
-                <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-            </div>
-        </div>
-        <div class="row row-bottom-padded-lg">
-            <div class="col-md-3 col-push-1">
-                <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-            </div>
-            <div class="col-md-8 col-md-push-1">
-                <h4 class="fh5co-number">03.</h4>
-                <h2 class="numberh2">录取</h2>
-            </div>
-        </div>
-        <div class="row row-bottom-padded-lg">
-            <div class="col-xs-push-2 col-md-8">
-                <h4 class="fh5co-number">04.</h4>
-                <h2>学分转换</h2>
+{#        <div class="row row-bottom-padded-lg">#}
+{#            <div class="col-md-3 col-push-1">#}
+{#                <div class="fh5co-icon"><i class="icon-browser"></i></div>#}
+{#            </div>#}
+{#            <div class="col-md-8 col-md-push-1">#}
+{#                <h4 class="fh5co-number">01.</h4>#}
+{#                <h2 class="numberh2">提交资料</h2>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="row row-bottom-padded-lg">#}
+{#            <div class="col-xs-push-2 col-md-8">#}
+{#                <h4 class="fh5co-number">02.</h4>#}
+{#                <h2>可行性评估</h2>#}
+{#            </div>#}
+{#            <div class="col-md-3 col-md-push-1">#}
+{#                <div class="fh5co-icon"><i class="icon-mobile"></i></div>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="row row-bottom-padded-lg">#}
+{#            <div class="col-md-3 col-push-1">#}
+{#                <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>#}
+{#            </div>#}
+{#            <div class="col-md-8 col-md-push-1">#}
+{#                <h4 class="fh5co-number">03.</h4>#}
+{#                <h2 class="numberh2">录取</h2>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="row row-bottom-padded-lg">#}
+{#            <div class="col-xs-push-2 col-md-8">#}
+{#                <h4 class="fh5co-number">04.</h4>#}
+{#                <h2>学分转换</h2>#}
                 {#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
                 {#                    <ul>#}
                 {#                        <li>根据指定的申请方案，准备相应材料和文书</li>#}
                 {#                        <li>必要时提供考试辅导和背景提升服务</li>#}
                 {#                    </ul>#}
-            </div>
-            <div class="col-md-3 col-md-push-1">
-                <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-            </div>
-        </div>
-        <div class="row row-bottom-padded-lg">
-            <div class="col-md-3 col-push-1">
-                <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-            </div>
-            <div class="col-md-8 col-md-push-1">
-                <h4 class="fh5co-number">05.</h4>
-                <h2 class="numberh2">快速毕业</h2>
-            </div>
-        </div>
+{#            </div>#}
+{#            <div class="col-md-3 col-md-push-1">#}
+{#                <div class="fh5co-icon"><i class="icon-mobile"></i></div>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="row row-bottom-padded-lg">#}
+{#            <div class="col-md-3 col-push-1">#}
+{#                <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>#}
+{#            </div>#}
+{#            <div class="col-md-8 col-md-push-1">#}
+{#                <h4 class="fh5co-number">05.</h4>#}
+{#                <h2 class="numberh2">快速毕业</h2>#}
+{#            </div>#}
+{#        </div>#}
 
     </div>
 {% endblock %}
