--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -214,7 +214,7 @@
 				<div class="col-md-6">
 					<div class="feature-left">
 						<span class="icon">
-							<i class="icon-checkmark"></i>
+							<i class="icon-file-text2"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>本科申请</h3>
@@ -225,7 +225,7 @@
                 <div class="col-md-6">
                     <div class="feature-left">
 						<span class="icon">
-							<i class="icon-checkmark"></i>
+							<i class="icon-onedrive"></i>
 						</span>
 						<div class="feature-copy">
 							<h3>研究生申请</h3>
@@ -239,7 +239,7 @@
                 <h1>保进办理流程</h1>
             </div>
             <div class="text-center" style="padding-bottom: 3em;margin-top:-2em;">
-                <img  src="/static/images/web/bjlc.png">
+                <img  src="/static/images/web/byztlct.png" style="width:100%;height: auto;" >
             </div>
         </div>
     </div>
