--- a/core/templates/web/studytour.html
+++ b/core/templates/web/studytour.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="course-header carousel-margin">
-        <img src="/static/images/web/courseheader.png">
+        <img src="/static/images/web/tour-banner.png">
     </div>
 
     <div style="background: url(../../static/images/web/twoBg.jpg) repeat-x scroll center bottom;">
@@ -31,7 +31,7 @@
                 <div class="row" style=" margin-top: 4em;">
                     <div class="col-md-4 animate-box fadeInUp animated ">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <img src="/static/images/web/tour-1.png" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>自然</h2>
                                 <p>蝴蝶馆&nbsp;&nbsp;Glenwood温泉&nbsp;&nbsp;Botanic植物园  </p>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-md-4 animate-box fadeInUp animated">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <img src="/static/images/web/tour-2.png" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>人文</h2>
                                 <p>红石音乐厅&nbsp;&nbsp;丹佛市区游</p>
@@ -49,7 +49,7 @@
                     </div>
                     <div class="col-md-4 animate-box fadeInUp animated">
                         <div class="hexoco-project-item">
-                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <img src="/static/images/web/tour-3.png" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
                                 <h2>体验</h2>
                                 <p>Elitch主题乐园&nbsp;&nbsp;室内跳伞&nbsp;&nbsp;丹佛水上世界 </p>
@@ -66,19 +66,19 @@
                         <h1>课程设计</h1>
                     </div>
                     <div class="col-xs-12 text-center" style="margin-top: 3em;">
-
+                        <img src="/static/images/web/tour-course.png" style="width: 100%;height: auto">
                     </div>
                 </div>
 
-                <div class="col-xs-12 text-center" style="margin-top: 4em;">
-                    <div class="col-xs-12">
-                        <h1>办理流程</h1>
-                    </div>
-
-                    <div class="col-xs-12 text-center" style="margin-top: 3em;">
-
-                    </div>
-                </div>
+{#                <div class="col-xs-12 text-center" style="margin-top: 4em;">#}
+{#                    <div class="col-xs-12">#}
+{#                        <h1>办理流程</h1>#}
+{#                    </div>#}
+{##}
+{#                    <div class="col-xs-12 text-center" style="margin-top: 3em;">#}
+{##}
+{#                    </div>#}
+{#                </div>#}
             </div>
         </div>
     </div>
