--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -32,8 +32,7 @@
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
-                                <h2>猎聘网</h2>
-                                <p>US News Rank 2</p>
+                                <h2>五月百货</h2>
                             </div>
                         </div>
                     </div>
@@ -41,8 +40,8 @@
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
-                                <h2>猎聘网</h2>
-                                <p>US News Rank 2</p>
+                                <h2>美国电力</h2>
+{#                                <p>US News Rank 2</p>#}
                             </div>
                         </div>
                     </div>
@@ -50,8 +49,8 @@
                         <div class="hexoco-project-item">
                             <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                             <div class="hexoco-text">
-                                <h2>猎聘网</h2>
-                                <p>US News Rank 2</p>
+                                <h2>CVS</h2>
+{#                                <p>US News Rank 2</p>#}
                             </div>
                         </div>
                     </div>
@@ -64,7 +63,7 @@
                     <div class="col-md-12">
                         <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-cloud"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4>提供北美就业咨询服务</h4>
@@ -73,7 +72,7 @@
 
                         <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-stack"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4>开放北美猎聘网人才资源数据库，让你的才华与优秀更快获得名企高管的关注</h4>
@@ -82,7 +81,7 @@
 
                         <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-command"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4>为想要归国就业的留学生提供职业测评、简历包装、就业与面试指导、岗位推荐等就业初期准备工作</h4>
