--- a/core/templates/web/assistedliving.html
+++ b/core/templates/web/assistedliving.html
@@ -79,7 +79,7 @@
     </nav>
 
     <div class="course-header carousel-margin " id="">
-        <img src="/static/images/web/courseheader.png">
+        <img src="/static/images/web/live-banner.png">
     </div>
 
     <div style="background: #fff;position: relative;"><label id="as" style="font-size:83px;">&nbsp;</label></div>
@@ -118,7 +118,7 @@
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-checkmark"></i>
+                            <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 class="zifont">留学一学年以上</h4>
@@ -127,7 +127,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-checkmark"></i>
+                            <i class="icon-home"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 class="zifont">完成学业或进修结束后两年内回国定居工作</h4>
@@ -136,7 +136,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-checkmark"></i>
+                            <i class="icon-clock"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 class="zifont">毕业或进修结束后首次入境未超过一年</h4>
@@ -146,7 +146,7 @@
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-checkmark"></i>
+                            <i class="icon-attachment"></i>
                         </span>
                         <div class="feature-copy">
                             <h4 style="margin-top:-5px;" class="zifont"> * 有免税指标（学习期间内连续在外180天可计为一个免税指标）</h4>
@@ -169,7 +169,7 @@
                     <div class="col-xs-12 text-left">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-profile"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">《留学回国人员证明》</h4>
@@ -178,7 +178,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-stack"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">《毕业证书》或《学习证明》</h4>
@@ -187,7 +187,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-credit-card"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">身份证（军官证）、户口本 （卡、页）</h4>
@@ -195,7 +195,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-profile"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">护照（记录学习期间全部出入境记录内容）</h4>
@@ -203,7 +203,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-file-text2"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">《自用物品申请表》（申报前在主管地海关领取）</h4>
@@ -211,7 +211,7 @@
                         </div>
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-files-empty"></i>
                             </span>
                             <div class="feature-copy">
                                 <h4 class="zifont">印件及所需其他材料*</h4>
@@ -223,7 +223,11 @@
                     <div class="col-xs-12">
                         <h1>办理流程</h1>
                     </div>
+                    <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                        <img src="/static/images/web/liveflow1.png" style="width: 100%;height: auto">
+                    </div>
                 </div>
+
             </div>
 
         </div>
@@ -240,7 +244,7 @@
             <div class="row" style=" margin-top: 3em;">
                 <div class="col-md-4 animate-box fadeInUp animated ">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live-1.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>餐厅推荐</h2>
                             <p>根据您的需求推荐当地优质餐厅与菜品，物美价廉的也可以是盛宴</p>
@@ -249,7 +253,7 @@
                 </div>
                 <div class="col-md-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live-2.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>交通出行</h2>
                             <p>日常出行向导，避开拥堵交通与嘈杂人群；会员机票预订服务，让你的远行与归国路，变得如此简单</p>
@@ -258,7 +262,7 @@
                 </div>
                 <div class="col-md-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live-3.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>体检挂号</h2>
                             <p>提供全球多家优质医院筛查体检的预约挂号功能，你的健康对我们很重要</p>
@@ -267,7 +271,7 @@
                 </div>
                 <div class="col-md-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live-4.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>住房建议</h2>
                             <p>怎样避免无良中介“携款私逃”？学校周边还有哪块风水宝地？恒心为你提供留学租房时的种种建议，让你在异乡也能有张温床</p>
@@ -276,7 +280,7 @@
                 </div>
                 <div class="col-md-4 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/live-5.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>经法咨询</h2>
                             <p>恒心会员免费享受留学途中的经济法律咨询服务，合同条款的隐藏内容，银行卡办理的注意事项，让法律成为你保护自己最好的武器</p>
@@ -291,7 +295,7 @@
                 <div class="col-md-4">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-bookmarks"></i>
                             </span>
                         <div class="feature-copy">
                             <p class="zifont" style="margin-top: 10px;">恒心注册会员（在恒心购买任一服务即可自动成为恒心会员）</p>
@@ -301,7 +305,7 @@
                 <div class="col-md-4">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-earth"></i>
                             </span>
                         <div class="feature-copy">
                             <p class="zifont" style="margin-top: 10px;">恒心 “HEX ELITE计划”成员</p>
@@ -311,7 +315,7 @@
                 <div class="col-md-4">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-user"></i>
                             </span>
                         <div class="feature-copy">
                             <p class="zifont" style="margin-top: 10px;">收到恒心特别邀请的群体</p>
@@ -339,7 +343,7 @@
             <div class="row" style=" margin-top: 4em;">
                 <div class="col-md-3 animate-box fadeInUp animated ">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-1.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>科技创业贷款</h2>
                         </div>
@@ -347,7 +351,7 @@
                 </div>
                 <div class="col-md-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-2.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>自主创业贷款</h2>
                         </div>
@@ -355,7 +359,7 @@
                 </div>
                 <div class="col-md-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-3.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>个人创业贷款</h2>
                         </div>
@@ -363,7 +367,7 @@
                 </div>
                 <div class="col-md-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-4.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>青少年创业贷款</h2>
                         </div>
@@ -371,7 +375,7 @@
                 </div>
                 <div class="col-md-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-5.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>高校毕业生自主创业贷款</h2>
                         </div>
@@ -379,7 +383,7 @@
                 </div>
                 <div class="col-md-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-6.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>创业基金贷款</h2>
                         </div>
@@ -387,7 +391,7 @@
                 </div>
                 <div class="col-md-3 animate-box fadeInUp animated">
                     <div class="hexoco-project-item">
-                        <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                        <img src="/static/images/web/loan-7.png" alt="Image" class="img-responsive">
                         <div class="hexoco-text">
                             <h2>普通创业贷款</h2>
                         </div>
@@ -406,7 +410,7 @@
                 <div class="col-xs-12 text-left">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-cloud"></i>
                             </span>
                         <div class="feature-copy">
                             <h4 class="zifont">申请人需具有完全民事行为能力</h4>
@@ -415,7 +419,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-credit-card"></i>
+                                <i class="icon-file-text2"></i>
                             </span>
                         <div class="feature-copy">
                             <h4 class="zifont">无不良信用及债务纪录</h4>
@@ -424,7 +428,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-list"></i>
+                                <i class="icon-credit-card"></i>
                             </span>
                         <div class="feature-copy">
                             <h4 class="zifont">无社保状态或持有失业证</h4>
@@ -435,6 +439,11 @@
             <div class="col-xs-6 text-center">
                 <div class="col-xs-12">
                     <h1>办理流程</h1>
+                </div>
+                <div class="col-xs-12 text-center">
+                    <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                        <img src="/static/images/web/liveflow2.png" style="width: 100%;height: auto">
+                    </div>
                 </div>
             </div>
         </div>
