--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -10,9 +10,9 @@
 
 {% block content %}
     <div class="course-header carousel-margin">
-        <img  src="/static/images/web/courseheader.png">
+        <img  src="/static/images/web/c-banner.png">
     </div>
-    <div style="background: rgba(0, 0, 0, 0) url(../../static/images/web/dxgh_bg.jpg) no-repeat scroll center bottom;">
+    <div style="">
         <div class="container" style="margin-top:3em;">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/c-1.png); ">
     {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                     </div>
                     <div>
@@ -148,7 +148,7 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/c-2.png); ">
     {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                     </div>
 {#                    <div>#}
@@ -166,7 +166,7 @@
                 <div class="col-md-6">
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-quill"></i>
+                            <i class="icon-leaf"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>学历认证直接认证资源，没有中介收取介绍费用，最低的价格，最快的速度，最贴心的服务</h5>
@@ -175,7 +175,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-quill"></i>
+                            <i class="icon-search"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>除客服的及时反馈外，恒心官网还拥有定制会员系统，可随时查询认证进度</h5>
@@ -184,7 +184,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-quill"></i>
+                            <i class="icon-stats-dots"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构认证成功率下降的艰难环境下，恒心仍能保持80%以上的认证成功几率</h5>
@@ -193,7 +193,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-quill"></i>
+                            <i class="icon-stack"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>多手准备，提供配套应急方案，总能找到最合适你的解决办法</h5>
@@ -202,7 +202,7 @@
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                         <span class="icon">
-                            <i class="icon-quill"></i>
+                            <i class="icon-spinner11"></i>
                         </span>
                         <div class="feature-copy">
                             <h5>如果认证结果失败，恒心保证退还所有认证费用</h5>
@@ -227,7 +227,7 @@
             <div class="col-md-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-profile"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>二寸彩色证件照片（蓝色背景）</h5>
@@ -236,7 +236,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-bookmarks"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>需认证的国外源语言（颁发证书院校国家的官方语言）学位证书或高等教育文凭正本原件及复印件</h5>
@@ -245,7 +245,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-files-empty"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>需认证学位证书或高等教育文凭所学课程完整的正式成绩单原件及复印件</h5>
@@ -255,7 +255,7 @@
                     <div class="col-md-6">
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-file-text2"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>需认证的国外学位证书（高等教育文凭）和成绩单（研究证明信）的中文翻译件原件（须经正规翻译机构（公司）进行翻译，个人翻译无效）</h5>
@@ -264,7 +264,7 @@
 
                         <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                             <span class="icon">
-                                <i class="icon-checkmark"></i>
+                                <i class="icon-stack"></i>
                             </span>
                             <div class="feature-copy">
                                 <h5>申请者留学期间所有护照（含所有留学期间的签证记录及出入境记录）原件及复印件</h5>
@@ -280,11 +280,13 @@
 {#                </div>#}
 {#            </div>#}
             <div class="row">
-                    <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
-                        <h1>申请所需流程</h1>
-                    </div>
-
+                <div class="col-md-12 text-center"  style="margin-bottom: 3em;">
+                    <h1>申请所需流程</h1>
                 </div>
+                <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                    <img src="/static/images/web/cflow.png" style="width: 70%;height: auto">
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
