--- a/core/templates/web/highschool.html
+++ b/core/templates/web/highschool.html
@@ -43,7 +43,7 @@
 
 {% block content %}
     <div class="course-header carousel-margin">
-        <img  src="/static/images/web/courseheader.png">
+        <img  src="/static/images/web/highschoolbg.png" style="width:100%;height: auto;">
     </div>
 
     <div class="container" style="margin-top:3em;">
@@ -53,7 +53,7 @@
             </div>
 
             <div class="col-md-6">
-                <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+                <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/1-18.png); ">
 {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
                 </div>
                 <div>
@@ -72,7 +72,7 @@
             <div class="col-md-6">
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-cloud"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>一.这不是放任，是最好的成全。与其在国内高中变成装填机器，不如给孩子一片广阔天空找寻自我的价值。</h5>
@@ -81,7 +81,7 @@
 
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-price-tag"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>二.每个孩子都有过人之处，你想眼看着国内的教育将它束缚遏制，还是让它在自由国度里尽情收获鼓励和赞许？</h5>
@@ -90,7 +90,7 @@
 
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-eye"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>三. 眼界与思维比成绩更能左右未来，你想看孩子因为分数不拔尖而被否定一切，还是带着满满自信笑对每一个明天？</h5>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
                     <span class="icon">
-                        <i class="icon-checkmark"></i>
+                        <i class="icon-earth"></i>
                     </span>
                     <div class="feature-copy">
                         <h5>四. 既然文凭至上让孩子必须在国内与千万人争二十分之一的优等名额，何不让他赢在起跑线，轻松跨入全球TOP100？</h5>
@@ -173,74 +173,79 @@
             <div class="col-md-8 col-md-offset-2 text-center heading-section" id="process" style="margin-top: 4em;">
                 <h4>海外高中申请流程</h4>
             </div>
+            <div class="col-xs-12 text-center">
+                <div class="col-xs-12 text-center" style="margin-top: -2em;">
+                    <img src="/static/images/web/highflow.png" style="width: 80%;height: auto">
+                </div>
+            </div>
 
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-                    <h4 class="fh5co-number">01.</h4>
-                    <h2 class="numberh2">申请前评估</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>充分了解学生的申请意愿和个人兴趣方向</li>
-                        <li>充分评估学生情况、背景</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-xs-push-2 col-md-8">
-                    <h4 class="fh5co-number">02.</h4>
-                    <h2>选定目标学校</h2>
-                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>
-                    <ul>
-                        <li>综合学生实力和意愿，选定目标学校 </li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-md-push-1">
-                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-                    <h4 class="fh5co-number">03.</h4>
-                    <h2 class="numberh2">制订申请方案</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>依据目标学校的要求，制订申请时间进程表 </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-xs-push-2 col-md-8">
-                    <h4 class="fh5co-number">04.</h4>
-                    <h2>申请材料准备</h2>
-                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>
-                    <ul>
-                        <li>根据指定的申请方案，准备相应材料和文书</li>
-                        <li>必要时提供考试辅导和背景提升服务</li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-md-push-1">
-                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-                    <h4 class="fh5co-number">05.</h4>
-                    <h2 class="numberh2">申请方案实施</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>基于指定的申请方案，将学生申请材料按时间规划递交学校，并保持与学校的沟通 </li>
-                    </ul>
-                </div>
-            </div>
+{#            <div class="row row-bottom-padded-lg">#}
+{#                <div class="col-md-3 col-push-1">#}
+{#                    <div class="fh5co-icon"><i class="icon-browser"></i></div>#}
+{#                </div>#}
+{#                <div class="col-md-8 col-md-push-1">#}
+{#                    <h4 class="fh5co-number">01.</h4>#}
+{#                    <h2 class="numberh2">申请前评估</h2>#}
+{#                    <p class="numberp">Lorem ipsum dolor sit amet</p>#}
+{#                    <ul>#}
+{#                        <li>充分了解学生的申请意愿和个人兴趣方向</li>#}
+{#                        <li>充分评估学生情况、背景</li>#}
+{#                    </ul>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="row row-bottom-padded-lg">#}
+{#                <div class="col-xs-push-2 col-md-8">#}
+{#                    <h4 class="fh5co-number">02.</h4>#}
+{#                    <h2>选定目标学校</h2>#}
+{#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
+{#                    <ul>#}
+{#                        <li>综合学生实力和意愿，选定目标学校 </li>#}
+{#                    </ul>#}
+{#                </div>#}
+{#                <div class="col-md-3 col-md-push-1">#}
+{#                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="row row-bottom-padded-lg">#}
+{#                <div class="col-md-3 col-push-1">#}
+{#                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>#}
+{#                </div>#}
+{#                <div class="col-md-8 col-md-push-1">#}
+{#                    <h4 class="fh5co-number">03.</h4>#}
+{#                    <h2 class="numberh2">制订申请方案</h2>#}
+{#                    <p class="numberp">Lorem ipsum dolor sit amet</p>#}
+{#                    <ul>#}
+{#                        <li>依据目标学校的要求，制订申请时间进程表 </li>#}
+{#                    </ul>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="row row-bottom-padded-lg">#}
+{#                <div class="col-xs-push-2 col-md-8">#}
+{#                    <h4 class="fh5co-number">04.</h4>#}
+{#                    <h2>申请材料准备</h2>#}
+{#                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>#}
+{#                    <ul>#}
+{#                        <li>根据指定的申请方案，准备相应材料和文书</li>#}
+{#                        <li>必要时提供考试辅导和背景提升服务</li>#}
+{#                    </ul>#}
+{#                </div>#}
+{#                <div class="col-md-3 col-md-push-1">#}
+{#                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="row row-bottom-padded-lg">#}
+{#                <div class="col-md-3 col-push-1">#}
+{#                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>#}
+{#                </div>#}
+{#                <div class="col-md-8 col-md-push-1">#}
+{#                    <h4 class="fh5co-number">05.</h4>#}
+{#                    <h2 class="numberh2">申请方案实施</h2>#}
+{#                    <p class="numberp">Lorem ipsum dolor sit amet</p>#}
+{#                    <ul>#}
+{#                        <li>基于指定的申请方案，将学生申请材料按时间规划递交学校，并保持与学校的沟通 </li>#}
+{#                    </ul>#}
+{#                </div>#}
+{#            </div>#}
         </div>
     </div>
 {% endblock %}
