--- a/core/templates/web/studytour.html
+++ b/core/templates/web/studytour.html
@@ -3,9 +3,9 @@
 
 {% block head %}
     <script type="text/javascript">
-    $(document).ready(function () {
-        $('#studytour').prop('class', 'actived');
-    });
+        $(document).ready(function () {
+            $('#studytour').prop('class', 'actived');
+        });
     </script>
 {% endblock %}
 
@@ -65,20 +65,70 @@
                     <div class="col-xs-12">
                         <h1>课程设计</h1>
                     </div>
-                    <div class="col-xs-12 text-center" style="margin-top: 3em;">
-                        <img src="/static/images/web/tour-course.png" style="width: 100%;height: auto">
+                    {#                    <div class="col-xs-12 text-center" style="margin-top: 3em;">#}
+                    {#                        <img src="/static/images/web/tour-course.png" style="width: 100%;height: auto">#}
+                    {#                    </div>#}
+                    <div class="col-xs-12 table-responsive">
+                        <table class="table table-bordered table-hover">
+                            <tr class ="info">
+                                <th class="text-center">Sunday 星期天</th>
+                                <th class="text-center">Monday 星期一</th>
+                                <th class="text-center">Tuesday 星期二</th>
+                                <th class="text-center">Wednesday 星期三</th>
+                                <th class="text-center">Thursday 星期四</th>
+                                <th class="text-center">Friday 星期五</th>
+                                <th class="text-center">Saturday 星期六</th>
+                            </tr>
+                            <tr class ="">
+                                <td class="text-center">出门</td>
+                                <td class="text-center">注册 新生训练 <br/>欢迎会 破冰</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">Capitol 科州首府 <br/>Down Town 丹佛市区</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">Botanical 植物园 <br/>D&B Arcade</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-1</td>
+                            </tr>
+                            <tr class ="">
+                                <td class="text-center"></td>
+                                <td class="text-center">10:00-Close <br/>Theme Park 游乐园</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">9:00-17:00 <br/>博物馆 动物园IMAX</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">Park Meadow 采购 <br/>Skydiving 室内跳伞</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-1</td>
+                            </tr>
+                            <tr class ="">
+                                <td class="text-center"></td>
+                                <td class="text-center">10:00-Close <br/>Water World 水上世界</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">农场 Barn & Farm<br/>蝴蝶与昆虫研究所</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">9:00-17:00<br/>Glenwood 天然温泉</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-1</td>
+                            </tr>
+                            <tr class ="">
+                                <td class="text-center"></td>
+                                <td class="text-center">Co Spring 奥特莱斯<br/>Garden of God</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">游泳 烤肉 BBQ Roller <br/>Skate 溜旱冰</td>
+                                <td class="text-center">Immersion English <br/>一把劲英语 9-5</td>
+                                <td class="text-center">Graduation<br/>毕业典礼 欢送会</td>
+                                <td class="text-center">满载而归</td>
+                            </tr>
+
+                        </table>
                     </div>
                 </div>
 
-{#                <div class="col-xs-12 text-center" style="margin-top: 4em;">#}
-{#                    <div class="col-xs-12">#}
-{#                        <h1>办理流程</h1>#}
-{#                    </div>#}
-{##}
-{#                    <div class="col-xs-12 text-center" style="margin-top: 3em;">#}
-{##}
-{#                    </div>#}
-{#                </div>#}
+                {#                <div class="col-xs-12 text-center" style="margin-top: 4em;">#}
+                {#                    <div class="col-xs-12">#}
+                {#                        <h1>办理流程</h1>#}
+                {#                    </div>#}
+                {##}
+                {#                    <div class="col-xs-12 text-center" style="margin-top: 3em;">#}
+                {##}
+                {#                    </div>#}
+                {#                </div>#}
             </div>
         </div>
     </div>
