--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -10,7 +10,6 @@
 	<meta name="keywords" content="" />
 
 	<link rel="stylesheet" href="/static/css/headercss/animate.css">
-{#	<link rel="stylesheet" href="/static/css/headercss/style.css">#}
     <link rel="stylesheet" href="/static/css/icomoon/style.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
 	<link rel="stylesheet" href="/static/css/headercss/magnific-popup.css">
@@ -45,7 +44,7 @@
 	<nav class="hxco-nav hengxin-header" role="navigation">
 		<div class="hxco-container">
 			<div class="row">
-				<div class="col-xs-2">
+				<div class="col-xs-2 text-center">
 					<div id="hxco-logo"><a href="#">HengXin.</a></div>
 				</div>
 				<div class="col-xs-10 text-center menu-1">
@@ -143,7 +142,7 @@
 					<p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
 					<p>We are unique, 我们只是比别人多了一点恒心</p>
                     <p>You are fortunate, 你只是别别人多了恒心</p>
-                    <p>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</p>
+                    <p><i class="icon-location"></i>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</p>
                     <p>All rights reserved Copyright © 四川恒心前途教育咨询有限公司</p>
 				</div>
                 <div class="col-md-4">
@@ -167,7 +166,7 @@
                         <a class="tagA" href="/zygh">
                             海归职业规划
                         </a>
-                        <a class="tagA" href="/loan">
+                        <a class="tagA" href="/assistedliving#loanid">
                             创业贷款申请
                         </a>
                         <a class="tagA" href="/immigrant">
@@ -180,7 +179,7 @@
 				<div class="col-md-4">
                     <h3>关注微信公众号</h3>
                     <img src="/static/images/web/wechat.jpg" style="width: 160px;height:160px;">
-                    <h3 style="margin-top: 1em"><i class="icon-old-phone"></i><span style="margin-left: 5px;">(86)028-8263-9653</span></h3>
+                    <h3 style="margin-top: 1em"><i class="icon-phone"></i><span style="margin-left: 5px;">(86)028-8263-9653</span></h3>
                     <h3 style="margin-top: 1em"><i class="icon-mail"></i><span style="margin-left: 5px;">info@hexedu.com</span></h3>
 				</div>
 
