--- a/core/templates/web/highschool.html
+++ b/core/templates/web/highschool.html
@@ -114,6 +114,66 @@
              <div class="col-md-8 col-md-offset-2 text-center" style="margin-top:-3em;">
                  <p>哥伦比亚中学（Columbia Academy Vancouver Canada），地处温哥华市中心，除却加拿大BC省教育部批准的课程、颁发BC省高中毕业文凭、教师均为持BC省教师牌照的加拿大注册教师之外，哥伦比亚中学与一般公立中学相比，还具有以下明显优势:</p>
              </div>
+            <div class="col-md-12 col-xs-12 table-responsive">
+                <table class="table table-bordered table-hover">
+                    <tr class ="info">
+                        <th class="text-center">对比项</th>
+                        <th class="text-center">哥伦比亚中学</th>
+                        <th class="text-center">一般公立学校</th>
+
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">学期设置</td>
+                        <td>每年3期，分别在1、5、9月</td>
+                        <td>每年9月，部分学校2月多开一期</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">课程设置</td>
+                        <td>12门课程/年</td>
+                        <td>8门课程/年</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">就读时间</td>
+                        <td>最快20个月高中毕业</td>
+                        <td>3年。若需ESL则多加一年</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">每班人数</td>
+                        <td>最多15人</td>
+                        <td>25-30人</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">课程辅导</td>
+                        <td>课后免费辅导</td>
+                        <td>学生基数大，个体关注较少</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">大学规划</td>
+                        <td>入学即开始大学申请规划辅导</td>
+                        <td>1个顾问对应500-2000名学生，无暇照顾</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">家校沟通</td>
+                        <td>及时反馈家长及监护人学生出勤率</td>
+                        <td>联系有限</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">课余生活</td>
+                        <td>组织学生参加公益活动，体验志愿者生活</td>
+                        <td>学校不作安排</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">授课条件</td>
+                        <td>Smart Board高端教学</td>
+                        <td>传统教学方式</td>
+                    </tr>
+                    <tr class ="">
+                        <td class="text-center">奖学金设置</td>
+                        <td>优秀学生科申请奖学金</td>
+                        <td>无奖学金</td>
+                    </tr>
+                </table>
+            </div>
 
 {#            <div class="col-md-4 animate-box fadeInUp animated">#}
 {#                <div class="hexoco-project-item">#}
